RESOLVED FIXED264200
WebXRSession should not hold a unique ptr to WebXRViewerSpace which is ref counted
https://bugs.webkit.org/show_bug.cgi?id=264200
Summary WebXRSession should not hold a unique ptr to WebXRViewerSpace which is ref co...
Ada Chan
Reported 2023-11-03 23:07:05 PDT
WebXRSession should not hold a unique ptr to WebXRViewerSpace which is ref counted
Attachments
Ada Chan
Comment 1 2023-11-03 23:07:24 PDT
Ada Chan
Comment 2 2023-11-03 23:22:05 PDT
EWS
Comment 3 2023-11-04 09:55:56 PDT
Committed 270230@main (67e35fd334d5): <https://commits.webkit.org/270230@main> Reviewed commits have been landed. Closing PR #19995 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.