WebXRSession should not hold a unique ptr to WebXRViewerSpace which is ref counted https://bugs.webkit.org/show_bug.cgi?id=264200 rdar://115180471

Reviewed by Chris Dumez.

WebXRViewerSpace subclasses EventTarget and therefore should be ref-counted.

* Source/WebCore/Modules/webxr/WebXRSession.cpp:
(WebCore::WebXRSession::WebXRSession):
* Source/WebCore/Modules/webxr/WebXRSession.h:
* Source/WebCore/Modules/webxr/WebXRSpace.h:
(WebCore::WebXRViewerSpace::create):

Canonical link: https://commits.webkit.org/270230@main